--- a/arch/arm64/configs/bm1000_defconfig
+++ b/arch/arm64/configs/bm1000_defconfig
@@ -106,7 +106,7 @@ CONFIG_NET_9P=m
 CONFIG_PCIEPORTBUS=y
 CONFIG_PCIEAER=y
 CONFIG_PCI_DEBUG=y
-CONFIG_PCIE_BAIKAL=y
+CONFIG_PCIE_BAIKAL_HOST=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_MTD=y
