--- a/arch/arm64/boot/dts/baikal/bm-e107.dts
+++ b/arch/arm64/boot/dts/baikal/bm-e107.dts
@@ -44,19 +44,19 @@
 	};
 };
 
-&cmu_cluster0 {
+&cmu0_cluster0 {
 	clock-frequency = <1500000000>;
 };
 
-&cmu_cluster1 {
+&cmu0_cluster1 {
 	clock-frequency = <1500000000>;
 };
 
-&cmu_cluster2 {
+&cmu0_cluster2 {
 	clock-frequency = <1500000000>;
 };
 
-&cmu_cluster3 {
+&cmu0_cluster3 {
 	clock-frequency = <1500000000>;
 };
 
@@ -182,19 +182,19 @@
 	status = "okay";
 };
 
-&pvt_ca57_0 {
+&pvt_cluster0 {
 	status = "okay";
 };
 
-&pvt_ca57_1 {
+&pvt_cluster1 {
 	status = "okay";
 };
 
-&pvt_ca57_2 {
+&pvt_cluster2 {
 	status = "okay";
 };
 
-&pvt_ca57_3 {
+&pvt_cluster3 {
 	status = "okay";
 };
 
@@ -281,7 +281,7 @@
 	status = "okay";
 };
 
-&spi {
+&spi0 {
 	num-cs = <4>;
 
 	cs-gpios = <0>;
