--- a/arch/arm64/boot/dts/baikal/bm-et101.dtsi
+++ b/arch/arm64/boot/dts/baikal/bm-et101.dtsi
@@ -113,10 +113,6 @@
 	status = "okay";
 };
 
-&pcie_lcru {
-	status = "okay";
-};
-
 &pcie0 {
 	status = "okay";
 	reset-gpios = <&porta 6 GPIO_ACTIVE_LOW>;
@@ -143,19 +139,19 @@
 	status = "okay";
 };
 
-&pvt_ca57_0 {
+&pvt_cluster0 {
 	status = "okay";
 };
 
-&pvt_ca57_1 {
+&pvt_cluster1 {
 	status = "okay";
 };
 
-&pvt_ca57_2 {
+&pvt_cluster2 {
 	status = "okay";
 };
 
-&pvt_ca57_3 {
+&pvt_cluster3 {
 	status = "okay";
 };
 
@@ -186,7 +182,7 @@
 	status = "okay";
 };
 
-&spi {
+&spi0 {
 	num-cs = <4>;
 
 	cs-gpios = <&porta 15 GPIO_ACTIVE_LOW>, <0>;
