--- a/arch/arm64/boot/dts/baikal/bm-et151.dts
+++ b/arch/arm64/boot/dts/baikal/bm-et151.dts
@@ -146,10 +146,6 @@
 	status = "okay";
 };
 
-&pcie_lcru {
-	status = "okay";
-};
-
 &pcie0 {
 	status = "okay";
 	reset-gpios = <&porta 6 GPIO_ACTIVE_LOW>;
@@ -181,19 +177,19 @@
 	status = "okay";
 };
 
-&pvt_ca57_0 {
+&pvt_cluster0 {
 	status = "okay";
 };
 
-&pvt_ca57_1 {
+&pvt_cluster1 {
 	status = "okay";
 };
 
-&pvt_ca57_2 {
+&pvt_cluster2 {
 	status = "okay";
 };
 
-&pvt_ca57_3 {
+&pvt_cluster3 {
 	status = "okay";
 };
 
@@ -224,7 +220,7 @@
 	status = "okay";
 };
 
-&spi {
+&spi0 {
 	num-cs = <4>;
 
 	cs-gpios = <&porta 15 GPIO_ACTIVE_LOW>, <0>;
