--- a/arch/arm64/boot/dts/baikal/bm-mitx.dts
+++ b/arch/arm64/boot/dts/baikal/bm-mitx.dts
@@ -133,10 +133,6 @@
 	status = "okay";
 };
 
-&pcie_lcru {
-	status = "okay";
-};
-
 &pcie0 {
 	status = "okay";
 	reset-gpios = <&porta 6 GPIO_ACTIVE_LOW>;
@@ -163,19 +159,19 @@
 	status = "okay";
 };
 
-&pvt_ca57_0 {
+&pvt_cluster0 {
 	status = "okay";
 };
 
-&pvt_ca57_1 {
+&pvt_cluster1 {
 	status = "okay";
 };
 
-&pvt_ca57_2 {
+&pvt_cluster2 {
 	status = "okay";
 };
 
-&pvt_ca57_3 {
+&pvt_cluster3 {
 	status = "okay";
 };
 
@@ -237,7 +233,7 @@
 	status = "okay";
 };
 
-&spi {
+&spi0 {
 	num-cs = <4>;
 
 	cs-gpios = <0>;
