--- a/arch/arm64/boot/dts/baikal/bm1000-mbm20.dts
+++ b/arch/arm64/boot/dts/baikal/bm1000-mbm20.dts
@@ -13,7 +13,7 @@
 
 / {
 	model = "Baikal Electronics MBM 2.0";
-	compatible = "baikal,mbm20", "baikal,bm1000", "baikal,baikal-m";
+	compatible = "baikal,mbm20", "baikal,bm1000";
 
 	buttons-backlight {
 		compatible = "gpio-keys";
