--- a/drivers/hwmon/Kconfig
+++ b/drivers/hwmon/Kconfig
@@ -1488,6 +1488,16 @@ config SENSORS_PVT
 	  This driver can also be built as a module.  If so, the module
 	  will be called pvt.
 
+config SENSORS_PVT_I2C
+	tristate "Baikal PVT I2C"
+	depends on I2C && I2C_SLAVE
+	help
+	  If you say yes here you get support for Baikal PVT single input
+	  temperature sensor chips data for Baikal-S SoC through I2C.
+
+	  This driver can also be built as a module. If so, the module
+	  will be called pvt-i2c.
+
 config SENSORS_RASPBERRYPI_HWMON
 	tristate "Raspberry Pi voltage monitor"
 	depends on RASPBERRYPI_FIRMWARE || (COMPILE_TEST && !RASPBERRYPI_FIRMWARE)
